--- a/wp-content/themes/healthkart/assets/scss/_category.scss
+++ b/wp-content/themes/healthkart/assets/scss/_category.scss
@@ -490,3 +490,32 @@
 		}
 	}
 }
+
+.entry-content ol,
+.entry-content ul {
+	margin-bottom: 10px;
+	padding-left: 30px;
+}
+
+.entry-content ol > li {
+	list-style-type: decimal;
+}
+
+.entry-content ul > li {
+	list-style-type: none;
+
+}
+.entry-content ul > li strong {
+
+	position: relative;
+}
+.entry-content ul > li strong::before{
+content: '';
+    height: 8px;
+    width: 8px;
+    position: absolute;
+    left: -20px;
+    background-color: #000;
+    border-radius: 50%;
+    top: 5px;
+}
