--- a/wp-content/themes/healthkart/assets/scss/_sidebar.scss
+++ b/wp-content/themes/healthkart/assets/scss/_sidebar.scss
@@ -114,7 +114,7 @@
 				}
 			}
 			@media (max-width: 767px){
-				order: 4;
+				order: 5;
 			}
 		}
 	}
@@ -202,12 +202,92 @@
 			display: none;
 		}
 		@media (max-width: 767px){
-			order: 3;
+			order: 4;
 		}
 	}
 	@media (max-width: 767px){
 	    display: inline-flex;
     	flex-direction: column;
+	}
+	.product-listing{
+		.recommend-products{
+			margin-bottom: 25px;
+		    border-bottom: 1px solid #d2d2d2;
+		    padding-bottom: 25px;
+		    .product-stack{
+			    &-image{
+			    	padding-right: 30px;
+	    			padding-left: 25px;
+	    			text-align: center;
+	    			img{
+	    				@media (max-width: 767px){
+				   	 		height: 140px;
+				   	 		padding: 10px;
+			   	 		}
+	    			}
+	    			@media (max-width: 991px){
+				    	padding-right: 15px;
+	    				padding-left: 15px;			
+	    			}
+			    }
+			    .product-des{
+		    	    text-transform: capitalize;
+				    font-size: 15px;
+				    line-height: 22px;
+				    vertical-align: top;
+				    font-weight: 600;
+				    margin-bottom: 30px;
+				    display: block;
+				    color: #222;
+				    @media (max-width: 767px){
+				    	padding: 0 15px;
+    					text-align: center;
+    					height: 80px;
+				    }
+			    }
+			    .buy-now-btn{
+		    	    text-transform: uppercase;
+				    text-align: center;
+				    .article-btn{
+					    font-size: 0.85rem;
+					    line-height: 20px;
+					    border: 1px solid #00bfbf;
+					    background: #1a4f69;
+					    font-weight: 400;
+					    border-radius: 2px;
+					    max-width: 110px;
+					    height: 38px;
+					    box-sizing: border-box;
+					    color: #fff;
+					    width: 100%;
+					    margin-bottom: 0;
+					    padding: 6px 12px!important;
+				    }
+				    @media(max-width: 767px){
+		    	    	margin-bottom: 20px;
+				    }
+			    }
+	    	}
+	    	@media (max-width: 767px){
+	    		.product-stack{
+	    			border: 1px solid #d2d2d2;
+    			    margin: 0;
+    			}
+	    	}
+	    	@media (max-width: 767px){
+		    	border-bottom: none;
+		    	padding-bottom: 0px;
+	    	}
+		}
+		&:last-child(){
+			.recommend-products{
+				border-bottom: 0;
+			}
+		}
+		@media (max-width: 767px){
+		    margin-top: 15px;
+		    order: 3;
+		}
 	}
 }
 .widget-wrap{
