editors pick new query

--- a/wp-content/themes/healthkart/assets/scss/_category.scss
+++ b/wp-content/themes/healthkart/assets/scss/_category.scss
@@ -519,3 +519,7 @@ content: '';
     border-radius: 50%;
     top: 5px;
 }
+.editors .similar-articles .trending-articles-single:nth-child(7){
+    display: none;
+
+}
