--- a/wp-content/themes/healthkart/assets/scss/_sidebar.scss
+++ b/wp-content/themes/healthkart/assets/scss/_sidebar.scss
@@ -295,6 +295,7 @@
 	    	@media (max-width: 767px){
 		    	border-bottom: none;
 		    	padding: 0px 6px 0px;
+		    	margin-bottom: 10px;
 	    	}
 		}
 		&:last-child(){
