author name alignment

--- a/wp-content/themes/healthkart/assets/scss/_author.scss
+++ b/wp-content/themes/healthkart/assets/scss/_author.scss
@@ -7,6 +7,7 @@
     }
     &-dname{
         margin: 0.3em 0 !important;
+        text-align: center !important;
     }
     &-social-media{
         display: flex;
