--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -169,7 +169,7 @@
 				}
 			}
 			p, span{
-			    font-family: 'Roboto', sans-serif !important;
+			    font-family: 'Nunito', sans-serif !important;
 				font-size: 17px;
 				line-height: 2 !important;
 				color: #333 !important;
