--- a/wp-content/themes/healthkart/assets/scss/_vars.scss
+++ b/wp-content/themes/healthkart/assets/scss/_vars.scss
@@ -3,6 +3,12 @@ $theme-colors: (
   "secondary": #004283,
   "dark": #333,
   "light": #f3f3f3,
+  /* theme colors 2021 */
+  "platinum": #D7E1F4,
+  "dark-blue": #0B1B3D,
+  "dark-turquoise": #05BFBF,
+  "white": #FFFFFF,
+  "light-gray-1": #BDC0C7,
 );
 
 $danger: #ad110a;
