--- a/wp-content/themes/healthkart/assets/scss/_header.scss
+++ b/wp-content/themes/healthkart/assets/scss/_header.scss
@@ -107,18 +107,18 @@
 				.left-header-menu{
 					display: flex;
 					align-items: center;
-					margin-left: 20px;
+					margin-left: 30px;
 					.menu-header-left-menu-container{
 						.menu{
 							margin-bottom:0;
 							.menu-item{
 								float: left;
 								&:not(:first-child){
-									margin-left: 30px;
+									margin-left: 40px;
 								}
 								a{
 									color: theme-color("dark-blue");
-									font-weight: bold;
+									font-weight: 700;
 								}
 							}
 						}
@@ -135,7 +135,7 @@
 			}
 			.search-bar{
 				width: 320px;
-		    	padding: 0 5px;
+		    	padding: 0 9.69px;
 				&:focus{
 					outline: 0;
 					box-shadow: none;
@@ -143,10 +143,15 @@
 					color: #272727;
 				}
 				&::placeholder {
-					color: #afafaf;
+					color:theme-color("light-gray-2");
 					font-family: "Nunito", sans-serif !important;
-					font-weight: 600;
+					font-weight: 700;
+					font-size: 18px;
+					line-height: 75px;
 					opacity: 1; 
+					@media(max-width: 768px){
+						font-size: 16px;
+					}
 				}
 				@media (max-width: 991px){
 					width: 280px;
@@ -400,7 +405,7 @@
 				background: white;
 				z-index: 99;
 				.main-header{
-				 	padding: 20px 0 4px !important;
+				 	padding: 18px 0 !important;
 					.site-logo{
 						img, span{
 							display: none;
@@ -739,16 +744,18 @@
     margin: 0;
 	margin-left: auto;
 	.input-group{
-		background-color: #F2F2F2;
+		background-color: theme-color("light-gray-1");
 		border-radius: 10pt;
     	height: 46px;
 		padding-left:35px;
 		.search-bar{
 			border:none;
 			background-color: transparent;
-			color:#afafaf;
+			color:theme-color("light-gray-2");
 			order:2;
 			box-shadow: none;
+			font-weight: 700;
+			font-size: 18px;
 			font-family: "Nunito", sans-serif !important;
 			height: 100%;
 		}
@@ -757,14 +764,24 @@
 			#searchBtn{
 				border-width: 1px !important;
 				box-shadow: none !important;
-				padding-right: 2px;
-				color:#afafaf;
+				padding-right:0;
+				color:theme-color("light-gray-2");
+				font-size: 20px;
 			}
 		}
 	}
 	@media(max-width:768px){
 		.input-group{
 			padding-left: 20px;
+			.search-bar{
+				font-size: 16px;
+				padding-left: 9.12px;
+			}
+			.button-icon{
+				#searchBtn{
+					font-size: 18px;
+				}
+			}
 		}
 	}
 }
