--- a/wp-content/themes/healthkart/assets/scss/_vars.scss
+++ b/wp-content/themes/healthkart/assets/scss/_vars.scss
@@ -8,7 +8,8 @@ $theme-colors: (
   "dark-blue": #0B1B3D,
   "dark-turquoise": #05BFBF,
   "white": #FFFFFF,
-  "light-gray-1": #BDC0C7,
+  "light-gray-1": #F2F4F8,
+  "light-gray-2": #2D374833,
 );
 
 $danger: #ad110a;
