--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -27,6 +27,8 @@
 	}
 	&-category {
 		margin-top: 20px;
+		padding-left: 0;
+		padding-right: 0;
 		&-single {
 			padding:0 5px;
 			position: relative;
@@ -86,6 +88,147 @@
 	}
 	@media(max-width:768px){
 		margin-top:20px;
+	}
+	&-animated{
+		display: flex;
+		height: 544px;
+		padding: 0;
+		border-radius: 10px;
+		overflow: hidden;
+		.slide-box{
+			overflow: hidden;
+			position: relative;
+			width: 100%;
+			transition:width 500ms ease-in-out;
+			&__img{
+				height: 100%;
+				img{
+					height: 100%;
+					object-fit: cover;
+				}
+			}
+			&__content1{
+				visibility: hidden;
+				opacity: 0;
+				width: 464px;
+				.category-container{
+					margin:15px 0 15px;
+					span, span a{
+						color: #fff;
+					}
+					span{
+						&.dot{
+							font-size: 7px;
+							position: relative;
+							i{
+								position: absolute;
+								left: -4px;
+								top: 0;
+							}
+						}
+						&:not(:last-child){
+							margin-right: 7px;
+						}
+					}
+				}
+			}
+			&__content2{
+				width: 232px;
+				visibility: visible;
+				opacity: 1;
+			}
+			&__content1, &__content2{
+				position: absolute;
+				bottom: 60px;
+				z-index: 2;
+				padding: 0 30px;
+				transition: opacity 500ms ease-in-out;
+
+				.blog-title{
+					a{
+						color: #fff;
+						font-weight: bold;
+					}
+				}
+			}
+			&.show{
+				width: 200%;
+				.slide-box{
+					&__content1{
+						visibility: visible;
+						opacity: 1;
+					}
+					&__content2{
+						visibility: hidden;
+						opacity: 0;
+					}
+				}
+			}
+			.overlay{
+				border-radius: 0px;
+				background: rgba(0, 0, 0, 0.6);
+			}
+		}
+		@media(max-width:768px) {
+			flex-direction: column;
+			height: 615px;
+			.slide-box{
+				height: 130px;
+				width: 100% !important;
+				transition:height 500ms ease-in-out;
+				&__img{
+					img{
+						height: 225px;
+						width: 100%;
+					}
+				}
+				&__content1, &__content2{
+					width: 100%;
+					bottom:10px;
+				}
+				&__content1{
+					.blog-title{
+						margin-bottom: 5px;
+						opacity: 0 !important;
+						visibility: hidden !important;
+					}
+					.last-read{
+						font-size: 12px;
+					}
+					.category-container{
+						margin:5px 0 10px;
+					}
+				}
+				&__content2{
+					opacity: 1 !important;
+					visibility:visible !important;
+					transform: translateY(0);
+					transition:transform 300ms ease-in;
+				}
+				&.show{
+					height: 225px;
+					.slide-box__content2{
+						transform: translateY(-150px);
+					}
+				}
+			}
+		}
+		@media(max-width:1024px) and (min-width:992px){
+			.slide-box{
+				&__content1{
+					width: 372px;
+				}
+			}
+		}
+		@media(max-width:768px) and (min-width:450px){
+			.slide-box{
+				&.show{
+					.slide-box__content2{
+						transform: translateY(-100px);
+					}
+				}
+			}
+		}
 	}
 }
 
@@ -451,6 +594,15 @@
 		outline: none;
 		box-shadow: none;
 		background-color: #00bfbf !important;
+	}
+	&--transparent{
+		background-color: rgba(242, 244, 248, 0.2) !important;
+		border:none;
+		border-radius: 10px;
+		padding:8px 30px;
+		&:hover{
+		background-color: rgba(242, 244, 248, 0.3) !important;
+		}
 	}
 }
 .view-all {
