--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -630,6 +630,7 @@
 	border-color: theme-color("dark-turquoise") !important;
 	font-weight: bold;
 	padding: 10px 43px;
+	border-radius: 10px;
 	&:hover {
 		background-color: #009999 !important;
 	}
