--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -239,7 +239,7 @@
 		font-size: 40px;
 		line-height: 45px;
 		font-weight: bold;
-		margin:72px 0 29px;
+		margin:80px 0 40px;
 		color: theme-color("dark-blue");
 		@media (max-width: 768px) {
 			font-size: 20px;
@@ -361,6 +361,84 @@
 		padding:0 16px;
 	}
 }
+.transformation-section{
+	.slick-slide {
+		margin: 0 10px;
+	  }
+	  /* the parent */
+	  .slick-list {
+		margin: 0 -10px;
+	  }
+	&-single{
+		&-image{
+			position: relative;
+			border-radius: 10px;
+   			 overflow: hidden;
+			.image-container{
+				height: 413px;
+				display: flex;
+				.before-image, .after-image{
+					img{
+						height: 100%;
+						object-fit: cover;
+					}
+				}
+			}
+			.slider-overlay{
+				position: absolute;
+    			background: transparent linear-gradient(
+1deg, #2D3748 0%, #090B0E00 100%) 0% 0% no-repeat padding-box;
+    			height: 100%;
+    			width: 100%;
+    			top: 0;
+    			left: 0;
+			}
+			.title{
+				text-align: center;
+				position: absolute;
+				bottom: 33px;
+				padding:0 20px;
+				line-height: 24px;
+				a{
+					font-size: 20px;
+					font-weight: bold;
+					color: #FFFFFF;
+				}
+				@media(max-width:768px){
+					bottom:21.5px;
+					line-height: 16px;
+					a{
+						font-size: 12px;
+					}
+				}
+			}
+			@media(max-width:768px){
+				.image-container{
+					height: 267px;
+					.after-image{
+						width: 100%;
+						img{
+							width: 100%;
+						}
+					}
+
+					.before-image{
+						display: none;
+					}
+				}
+			}
+		}
+	}
+	@media(max-width: 768px){
+		.slick-slide {
+			margin: 0 5px;
+		  }
+		  /* the parent */
+		  .slick-list {
+			margin: 0 -5px;
+		  }
+	}
+}
 .content {
 	&-title {
 		.category a {
@@ -406,24 +484,6 @@
 						display: none;
 					}
 				}
-			}
-		}
-		.transformation {
-			&-after {
-				color: #3dd598;
-				/*border-right: 1px solid #707070;*/
-			}
-			&-before {
-				color: #fc5a5a;
-			}
-			&-seperator {
-				color: #707070;
-				font-size: 20px;
-				margin-top: -5px;
-			}
-			&-border-right {
-				border-right: 1px solid #707070;
-				margin: 0;
 			}
 		}
 		@media (max-width: 767px) {
@@ -820,66 +880,6 @@
 		}
 	}
 }
-.transformation-section {
-	&-single {
-		&-image {
-			@media (max-width: 767px) {
-				a {
-					flex-wrap: nowrap;
-					justify-content: center;
-					.transform {
-						width: 100%;
-					}
-				}
-			}
-			img {
-				height: 360px;
-				width: 100%;
-				object-fit: cover;
-				object-position: top;
-				@media (max-width: 767px) {
-					height: auto;
-				}
-			}
-			.img-tag {
-				position: absolute;
-				color: #fff;
-				background-color: #212121;
-				border-radius: 10px;
-				border: 1px solid #707070;
-				bottom: 10px;
-				left: 20px;
-				font-size: 18px;
-				font-weight: bold;
-			}
-		}
-		&-content {
-			.content-title {
-				.title {
-					line-height: 24px;
-					a {
-						font-size: 21px;
-						font-weight: 600;
-						color: #000;
-					}
-					@media (min-width: 768px) {
-						height: 55px;
-					}
-				}
-			}
-		}
-		@media (max-width: 767px) {
-			margin-bottom: 30px;
-		}
-	}
-	&-heading {
-		border-bottom: 1px solid #ececec;
-		font-weight: bold;
-		font-size: 20px;
-		font-weight: bold;
-	}
-}
-
 .more-articles {
 	&-section {
 		@media (max-width: 767px) {
