--- a/wp-content/themes/healthkart/assets/scss/_global.scss
+++ b/wp-content/themes/healthkart/assets/scss/_global.scss
@@ -349,6 +349,7 @@ strong {
 	display: flex;
 	justify-content: center;
 	margin-top: 20px;
+	margin-bottom: 0;
 	li{
 		button{
 			background-color: theme-color("dark-blue") !important;
@@ -372,4 +373,15 @@ strong {
 	@media(max-width:768px){
 		margin-top: 15px;
 	}
+}
+
+/* gradient overlay */
+.gradient-overlay{
+	position: absolute;
+	background:linear-gradient(1deg, #2D3748 0%, #090B0E00 100%);
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	opacity: 0.9;
 }
