--- a/wp-content/themes/healthkart/assets/scss/_global.scss
+++ b/wp-content/themes/healthkart/assets/scss/_global.scss
@@ -5,6 +5,7 @@
 body {
 	font-family: "Nunito", sans-serif;
 	position: relative;
+	color: theme-color("dark-blue");
 	&.no-scrolling {
 		overflow: hidden;
 	}
@@ -381,7 +382,7 @@ strong {
 	background:linear-gradient(1deg, #2D3748 0%, #090B0E00 100%);
 	height: 100%;
 	width: 100%;
-	top: 0;
+	bottom: 0;
 	left: 0;
-	opacity: 0.9;
+	opacity: 0.6;
 }
