--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -443,11 +443,14 @@
 			.slider-overlay{
 				position: absolute;
     			background:linear-gradient(1deg, #2D3748 0%, #090B0E00 100%);
-    			height: 100%;
+    			height: 276px;
     			width: 100%;
-    			top: 0;
+    			bottom: 0;
     			left: 0;
 				opacity: 0.9;
+				@media(max-width:768px){
+					height: 249.5px;
+				}
 			}
 			.title{
 				text-align: center;
@@ -669,6 +672,9 @@
 			overflow: hidden;
 		}
 		&-image {
+			.gradient-overlay{
+				opacity: 0.6;
+			}
 			img {
 				height: 243px;
 				width: 100%;
@@ -704,6 +710,7 @@
 		&-content {
 			padding: 10px 20px 25px;
 			.content-title {
+				min-height: 57px;
 				.title {
 					margin-bottom: 0;
 					line-height: 25px !important;
@@ -712,6 +719,9 @@
 						font-weight: bold;
 						color: theme-color("dark-blue");
 					}
+				}
+				@media(max-width:768px){
+					min-height: auto;
 				}
 			}
 			.content-description {
@@ -887,62 +897,91 @@
 	background-color: transparent;
 }
 .infographics {
-	&-heading {
-		border-bottom: 1px solid #ececec;
-		font-weight: bold;
-		font-size: 20px;
-		font-weight: bold;
+	&-section{
+		background-color: theme-color("light-gray-1");
+		padding:30px 0 48px;
+		margin-top: 60px;
+	}
+	&-heading{
+		margin:0px 0 30px;
+	}
+	&-articles{
+		margin-left: auto;
+		margin-right: auto;
 	}
 	&-articles-single {
 		position: relative;
+		padding:0;
+		margin-bottom: 20px;
+
+		.wraper{
+			background-color: #fff;
+			border-radius: 10px;
+			overflow: hidden;
+		}
+
+		&:not(:nth-child(3n)){
+			padding-right: 20px;
+		}
 		&-image {
+			height: 243px;
+			position: relative;
+			.gradient-overlay{
+				height: 99px;
+				background: linear-gradient(0deg, #2D3748 0%, #090B0E00 100%);
+			}
+			.date-time-info{
+				position: absolute;
+				bottom: 10px;
+    			left: 0;
+				padding: 0 20px;
+				color: #fff;
+				font-size: 18px;
+				line-height: 24px;
+				display: flex;
+				align-items: center;
+
+				.dot{
+					font-size: 8px;
+					padding: 0 6px;
+				}
+			}
 			img {
-				height: 200px;
+				height: 100%;
 				width: 100%;
 				object-fit: cover;
-				@media (max-width: 991px) {
-					height: 120px;
-				}
 				@media (max-width: 767px) {
-					height: auto;
+					height: 100%;
 				}
-			}
-			@media (min-width: 768px) {
-				margin-bottom: 20px;
-			}
-			@media (max-width: 767px) {
-				margin-bottom: 0.5rem !important;
 			}
 		}
 		&-content {
+			padding: 10px 20px 20px;
 			.content-title {
 				.title {
+					min-height: 54.4px;
 					line-height: 22px !important;
+					margin-bottom: 0;
 					a {
-						font-size: 16px;
-						font-weight: 600;
-						color: black;
+						font-size: 20px;
+						line-height: 25px;
+						font-weight: bold;
+						color: theme-color("dark-blue");
 					}
 				}
 			}
 			.content-description {
+				margin-top: 10px;
+				font-size: 18px;
+				line-height: 25px;
 				@media (max-width: 991px) {
-					font-size: 13px;
-					line-height: 18px;
-					margin: 12px 0;
+					font-size: 14px;
+					line-height: 25px;
+					margin: 10px 0 0;
 				}
-			}
-			@media (max-width: 767px) {
-				margin-top: 1rem;
 			}
 		}
 		@media (min-width: 768px) {
-			&:first-child,
-			&:nth-child(2) {
-				&:after {
-					display: none;
-				}
-			}
 			&:after {
 				content: "";
 				position: absolute;
@@ -954,8 +993,41 @@
 				height: 0px;
 			}
 		}
-		@media (max-width: 767px) {
-			padding-bottom: 1.5rem !important;
+	}
+	@media(max-width:768px){
+		&-section{
+			margin-top: 20px;
+			padding:20.5px 0 20px;
+		}
+
+		&-heading{
+			margin-bottom: 10.5px;
+			line-height: 45px;
+		}
+		&-articles{
+			&-single{
+				margin-bottom: 0;
+				padding-bottom: 10px;
+				&:not(:nth-child(3n)){
+					padding-right: 0;
+				}
+				&-image{
+					.date-time-info{
+						font-size: 14px;
+						line-height: 21px;
+					}
+					.gradient-overlay{
+						height: 90px;
+					}
+				}
+				&-content{
+					.content-title{
+						.title{
+							min-height: auto;
+						}
+					}
+				}
+			}
 		}
 	}
 }
